--- a/ressources/Info_mac.plist
+++ b/ressources/Info_mac.plist
@@ -2,12 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIconFile</key>
+  <key>CFBundleShortVersionString</key>
+  <string>2.0.1-rc-37</string>
+  <key>CFBundleVersion</key>
+  <string>2.0.1</string>
+  <key>CFBundleIconFile</key>
 	<string>@ICON@</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleGetInfoString</key>
-	<string>Created by Qt/QMake</string>
 	<key>CFBundleIdentifier</key>
 	<string>de.visolutions.QtInstall</string>
 	<key>CFBundleSignature</key>
