--- a/ressources/QtInstall.rc
+++ b/ressources/QtInstall.rc
@@ -1,2 +1,51 @@
-IDI_ICON1               ICON    DISCARDABLE     "qtInstall.ico"
+// program_strings.h
+#ifndef _STRINGS_H_
+#define _STRINGS_H_
 
+#define _STR_COMPANY_NAME       "VI Solutions"
+#define _STR_PRODUCT_NAME       "QtInstall"
+#define _PRODUCT_VERSION        2,0,1,0
+#define _STR_PRODUCT_VERSION    "2.0"
+#define _STR_FILE_DESCRIPTION   "Creating Installation Packages"
+#define _FILE_VERSION           2,0,37,0
+#define _STR_FILE_VERSION       "1,8,23,0"
+#define _STR_INTERNAL_NAME      "QT Install"
+#define _STR_LEGAL_COPYRIGHT    "Copyright (C) 2021 (GPL)"
+#define _STR_LEGAL_TRADE_1      "All rights reserved or something"
+#define _STR_LEGAL_TRADE_2      _STR_LEGAL_TRADE_1
+#define _STR_ORIGINAL_FILE_NAME "qtinstall.exe"
+#define _STR_WEBSITE            "www.valentins-qtsolutions.de"
+
+#endif /* _STRINGS_H_ */
+
+// program.rc
+
+IDI_ICON1               ICON    DISCARDABLE     "QtInstall.ico"
+
+#include <windows.h>
+//#include "program_strings.h"
+
+1 VERSIONINFO
+FILEVERSION     _FILE_VERSION
+PRODUCTVERSION  _PRODUCT_VERSION
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904E4"
+    BEGIN
+      VALUE "CompanyName", _STR_COMPANY_NAME
+      VALUE "FileDescription", _STR_FILE_DESCRIPTION
+      VALUE "FileVersion", _STR_FILE_VERSION
+      VALUE "InternalName", _STR_INTERNAL_NAME
+      VALUE "LegalCopyright", _STR_LEGAL_COPYRIGHT
+      VALUE "OriginalFilename", _STR_ORIGINAL_FILE_NAME
+      VALUE "ProductName", _STR_PRODUCT_NAME
+      VALUE "ProductVersion", _STR_PRODUCT_VERSION
+    END
+  END
+
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x409, 1252
+  END
+END
